--- a/w7-lab-ai/src/app/home/home.page.html
+++ b/w7-lab-ai/src/app/home/home.page.html
@@ -10,52 +10,35 @@
     <ion-grid>
       <ion-row>
         @for (img of availableImages; track img.url) {
-          <ion-col size="12" sizeMd="4">
-            <ion-card class="ion-activatable" (click)="selectImage(img.url)">
-              <!-- TODO: Add ion-img -->
-              <!-- HINT:
-              <ion-img [src]="img.url"></ion-img>
-              -->
-              
-              <ion-ripple-effect></ion-ripple-effect>
-              <ion-card-content>
-                <!-- TODO: Add radio button group -->
-                <!-- HINT:
-                <ion-radio-group [(ngModel)]="selectedImage" name="imageSelect">
-                  <ion-item lines="none">
-                    <ion-radio [value]="img.url" slot="start"></ion-radio>
-                    <ion-label>{{ img.label }}</ion-label>
-                  </ion-item>
-                </ion-radio-group>
-                -->
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
+        <ion-col size="12" sizeMd="4">
+          <ion-card class="ion-activatable" (click)="selectImage(img.url)">
+            <!-- TODO: Add ion-img -->
+            <ion-img [src]="img.url"></ion-img>
+
+            <ion-ripple-effect></ion-ripple-effect>
+            <ion-card-content>
+              <!-- TODO: Add radio button group -->
+              <ion-radio-group [(ngModel)]="selectedImage" name="imageSelect">
+                <ion-item lines="none">
+                  <ion-radio [value]="img.url" slot="start"></ion-radio>
+                  <ion-label>{{ img.label }}</ion-label>
+                </ion-item>
+              </ion-radio-group>
+
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
         }
       </ion-row>
     </ion-grid>
-    
+
     <ion-card>
       <ion-card-content>
         <!-- TODO: Add textarea -->
-        <!-- HINT:
-        <ion-textarea
-          [(ngModel)]="prompt"
-          name="prompt"
-          label="Instructions"
-          labelPlacement="floating"
-          [autoGrow]="true"
-          rows="2"
-          class="ion-margin-bottom"
-        ></ion-textarea>
-        -->
+        <ion-textarea [(ngModel)]="prompt" name="prompt" label="Instructions" labelPlacement="floating"
+          [autoGrow]="true" rows="2" class="ion-margin-bottom"></ion-textarea>
 
-        <ion-button 
-          type="submit" 
-          expand="block"
-          class="ion-margin-top"
-          [disabled]="isLoading"
-        >
+        <ion-button type="submit" expand="block" class="ion-margin-top" [disabled]="isLoading">
           <ion-icon name="cafe-outline" slot="start"></ion-icon>
           {{ isLoading ? 'Generating...' : 'Generate Recipe' }}
         </ion-button>
@@ -63,18 +46,18 @@
     </ion-card>
 
     @if (output) {
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Generated Recipe</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          <ion-text [innerHTML]="formattedOutput"></ion-text>
-        </ion-card-content>
-      </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Generated Recipe</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-text [innerHTML]="formattedOutput"></ion-text>
+      </ion-card-content>
+    </ion-card>
     }
 
     @if (isLoading) {
-      <ion-progress-bar type="indeterminate"></ion-progress-bar>
+    <ion-progress-bar type="indeterminate"></ion-progress-bar>
     }
   </form>
 </ion-content>
